--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
   name: Gabriel Walker
   avatar: icon.png
   job: "Data Science"
-  bio: "Bio goes here."
+  bio: "A selection of projects."
   email: "email@gmail.com"
   disqus-shortname:
   twitter: #username
