--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,4 +1,4 @@
-- name: leonids
+- name: Project Name
   description: "Bacon ipsum dolor sit amet doner meatball jowl short ribs, chicken prosciutto salami frankfurter. Pig drumstick turducken short ribs, brisket meatloaf ham hock shankle andouille corned beef strip steak. Venison ham bresaola strip steak. Pork belly ribeye prosciutto t-bone."
-  image: pong.png
-  github: https://github.com/renyuanz/leonids
+  image: icon.png
+  github: https://github.com/gbwalker
